// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EdgesSelection should match snapshot when no selected edge 1`] = `
<Connect
  actions={
    Object {
      "updateStoreValue": [Function],
    }
  }
  mapToProps={[Function]}
  updateStoreValue={[MockFunction]}
>
  <Component />
</Connect>
`;

exports[`EdgesSelection should match snapshot when selected edge 1`] = `
<Connect
  actions={
    Object {
      "updateStoreValue": [Function],
    }
  }
  mapToProps={[Function]}
  selectedElement={
    Object {
      "1": "edge",
    }
  }
  updateStoreValue={[MockFunction]}
>
  <Component />
</Connect>
`;
